--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
   <div id="contact" class="container-lg my-5">
     <h1 class="text-center text-decoration-underline mb-4" data-aos="fade-up">Contact Us</h1>
     <div class="px-4 py-0 mb-5 text-center">
-      <h1 class="display-5 fw-bold text-body-emphasis">Let's Chat!</h1>
+      <h1 class="display-5 fw-bold text-body-emphasis" data-aos="fade-up">Let's Chat!</h1>
       <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">
+        <p class="lead mb-4" data-aos="fade-up">
           If you are in any way interested in working with us, or learning more about what we do, hit us up! We would
           love to hear from you.
         </p>
-        <p>
+        <p data-aos="fade-up">
           <a class="btn btn-primary btn-lg px-4 gap-3" href="mailto:jordan@badgerbeardgames.com"><i
               class="bi bi-envelope-at-fill"></i>
             jordan@badgerbeardgames.com</a>
