fixing spelling mistake

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div>
               <h3 class="fs-2 text-body-emphasis">Visionary</h3>
               <p>
-                We are not afriad to try something new, and find new and creative ways to achieve greatness. Our goal is
+                We are not afraid to try something new, and find new and creative ways to achieve greatness. Our goal is
                 to give players valuable experiences to spend their time on; rather than simply treat each
                 player as a statistic
                 </a>
