updated stickys trailer video

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     <div style="height: 500px;" class="mb-3" data-aos="fade-up">
       <iframe style="height: 500px;" class="img-thumbnail img" width="100%" height="400px"
-        src="https://www.youtube.com/embed/NpEaa2P7qZI?si=wumLi-_PL_ZAckGT" title="YouTube video player" frameborder="0"
+        src="https://www.youtube.com/embed/_V4nX9tSKt0?si=wumLi-_PL_ZAckGT" title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
