fixing privacy issue with youtube video

--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
     <h1 class="text-center text-decoration-underline mb-4" data-aos="fade-up">Stickys</h1>
 
     <div style="height: 500px;" class="mb-3" data-aos="fade-up">
-      <iframe style="height: 500px;" class="img-thumbnail img" width="100%" height="400px"
-        src="https://www.youtube.com/embed/_V4nX9tSKt0?si=wumLi-_PL_ZAckGT" title="YouTube video player" frameborder="0"
+      <iframe class="img-thumbnail img" width="100%" style="height: 500px;"
+        src="https://www.youtube-nocookie.com/embed/_V4nX9tSKt0?si=GFJNpfm__HrYA-1M" title="YouTube video player"
+        frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
