updating kickstarter url

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
         <img height="100px" src="assets/img/wishlistonsteam.png" alt="wishlist on steam" />
       </a>
 
-      <a class="btn btn-primary btn-lg p-0 overflow-hidden" href="" data-aos="fade-left">
+      <a class="btn btn-primary btn-lg p-0 overflow-hidden" href="https://www.kickstarter.com/projects/stickys/stickys"
+        data-aos="fade-left">
         <img height="100px" src="assets/img/backonkickstarter.png" alt="back us on kickstarter" />
       </a>
     </div>
